--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: Arial, Helvetica, sans-serif;
        }
 
-        body {background-image: url("FundoBlack.jpg");
+        body {background-image: url("Fundo2.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-attachment: fixed;
