--- a/Index.html
+++ b/Index.html
@@ -86,7 +86,7 @@
      <img src="sakurajima.jpg" alt="Sakurajima-san" width="850" height="620">
      <a href="">Sakurajima</a>
      </div>
-        <footer> Segundo a comunidade esse top 5 seria o mais justo 
+        <footer> Segundo a comunidade esse top 5 seria o adequado.
          levando em conta que cada pessoa tem aquela waifu dos sonho, por isso
          esse top 5 pode ficar desagradavel ou insatisfeito com os resultados, para alguns a melhor opsão seria
          juntar a comunidade como um todo mostrando respeito para todas as Waidus. </footer>
